[gd_scene load_steps=7 format=3 uid="uid://br0d2gl2dqtow"]

[ext_resource type="Script" path="res://scripts/enemy/unicorn_ai.gd" id="1_2b2bk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_72p4o"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_n7s76"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_ybbys"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_lqjhl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wb1jr"]
radius = 10.0

[node name="UnicornAI" type="Node3D" node_paths=PackedStringArray("state_chart", "player_detection_area")]
script = ExtResource("1_2b2bk")
state_chart = NodePath("StateChart")
player_detection_area = NodePath("PlayerDetectionArea")
attack_range = 5.0

[node name="PlayerDetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_wb1jr")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_72p4o")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("3_n7s76")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("4_ybbys")

[node name="PlayerInSight" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("5_lqjhl")
to = NodePath("../../Walking")
event = &"player_in_sight"
delay_in_seconds = "0.0"

[node name="Walking" type="Node" parent="StateChart/Root"]
script = ExtResource("4_ybbys")

[node name="PlayerInRange" type="Node" parent="StateChart/Root/Walking"]
script = ExtResource("5_lqjhl")
to = NodePath("../../Shooting")
event = &"player_in_range"
delay_in_seconds = "0.0"

[node name="Shooting" type="Node" parent="StateChart/Root"]
script = ExtResource("4_ybbys")

[node name="FinishedShooting" type="Node" parent="StateChart/Root/Shooting"]
script = ExtResource("5_lqjhl")
to = NodePath("../../Walking")
event = &"finished_shooting"
delay_in_seconds = "0.0"

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Idle" to="." method="_on_non_walking_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Shooting" to="." method="_on_shooting_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Shooting" to="." method="_on_non_walking_state_physics_processing"]
